--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   fluttertoast: ^8.1.1
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
