--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - lang/ar.json
+    - lang/en.json
     - assets/images/quote.png
   fonts:
     - family: Tajawal
